<resources>
    <string name="intro1_text">An open source launcher with lots of useful features.</string>
    <string name="intro1_community">Large Community</string>
    <string name="intro1_features">Packed with Features</string>
    <string name="intro1_customizable">Customizable</string>
    <string name="intro2_text">Swipe in from the left border of your home screen to open the minibar and select an action.</string>
    <string name="intro3_text">You can choose a style for your app drawer and hide unused apps from the settings.</string>
    <string name="intro4_text">Search for something on the web or filter your apps from the search bar.</string>
    <string name="minibar">Minibar</string>
    <string name="minibar_title__edit_minibar">Edit Minibar</string>
    <string name="minibar_summary__edit_minibar">Change the minibar layout.</string>
    <string name="minibar_title__set_wallpaper">Set Wallpaper</string>
    <string name="minibar_summary__set_wallpaper">Set the desktop wallpaper.</string>
    <string name="minibar_title__lock_screen">Lock Screen</string>
    <string name="minibar_summary__lock_screen">Lock the screen immediately.</string>
    <string name="minibar_title__device_settings">Device Settings</string>
    <string name="minibar_summary__device_settings">Shortcut to device settings.</string>
    <string name="minibar_title__launcher_settings">Launcher Settings</string>
    <string name="minibar_summary__launcher_settings">Shortcut to OpenLauncher settings.</string>
    <string name="minibar_title__volume_dialog">Volume Dialog</string>
    <string name="minibar_summary__volume_dialog">Display all available volume sliders.</string>
    <string name="minibar_title__app_drawer">Open App Drawer</string>
    <string name="minibar_summary__app_drawer">Open the app drawer.</string>
    <string name="minibar_title__search_bar">Open Search Bar</string>
    <string name="minibar_summary__search_bar">Open the search bar.</string>
    <string name="minibar_title__mobile_network">Mobile Network Settings</string>
    <string name="minibar_summary__mobile_network">Shortcut to the mobile network settings.</string>
    <string name="minibar_title__notification_bar">Show Notification Bar</string>
    <string name="minibar_summary__notification_bar">Expand the notification view at the top of the screen.</string>
    <string name="minibar_title__camera">Camera</string>
    <string name="minibar_summary__camera">Take a picture with your camera app</string>
    <string name="about_libs">Open Source Libraries</string>
    <string name="about_rate">Rate</string>
    <string name="about_credit">Contributors</string>
    <string name="community">Community</string>
    <string name="more_info_foss">More information about contributing to open source projects on Android.</string>
    <string name="join_community">Join the Community</string>
    <string name="bug_reports_suggest_improvements">Report bugs and suggest improvements on GitHub.</string>
    <string name="help_translating_this_app">Translate this app to other languages with GitHub or Stringlate!</string>
    <string name="source_code">Source Code</string>
    <string name="project_license">Project License</string>
    <string name="project_contribution_info">Contribution Info</string>
    <string name="more_info_on_how_to_contribute_to_this_project">How you can contribute to this project.</string>
    <string name="contribute_code_to_this_project_anybody_welcome">Contribute code to the project. Everyone is welcome to submit changes!</string>
    <string name="project_team">Project Team</string>
    <string name="contributors_public_info">Contributors can provide information to be shown here after improving the launcher.</string>
    <string name="contribute">Contribute</string>
    <string name="donate">Donate</string>
    <string name="help">Help</string>
    <string name="licenses">Licenses</string>
    <string name="contributors">Contributors</string>
    <string name="changelog">Changelog</string>
    <string name="more">More</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="rate_the_app">Rate</string>
    <string name="translate">Translate</string>
    <string name="bug_reports">Report Bugs</string>
    <string name="more_info_support">More information on donating or otherwise supporting this project.</string>
    <string name="android_contribution_guide">Android Development</string>
    <string name="pref_title__settings">Settings</string>
    <string name="pref_title__desktop">Desktop</string>
    <string name="pref_title__dock">Dock</string>
    <string name="pref_title__app_drawer">App Drawer</string>
    <string name="pref_title__appearance">Appearance</string>
    <string name="pref_title__behavior">Behavior</string>
    <string name="pref_title__advanced">Advanced</string>
    <string name="pref_title__hide_apps">Hide Apps</string>
    <string name="pref_title__about">About</string>
    <string name="pref_title__size">Size</string>
    <string name="pref_title__style">Style</string>
    <string name="pref_title__color">Colors</string>
    <string name="pref_title__icons">Icons</string>
    <string name="pref_title__search_bar">Search Bar</string>
    <string name="pref_title__interfaces">Interfaces</string>
    <string name="pref_title__inputs">Inputs</string>
    <string name="pref_title__feels">Feels</string>
    <string name="pref_title__gestures">Gestures</string>
    <string name="pref_title__others">Others</string>
    <string name="pref_title__animations">Animations</string>
    <string name="pref_title__debug">Debug</string>
    <string name="pref_title__desktop_indicator_style">Indicator Style</string>
    <string name="pref_title__desktop_wallpaper_scroll">Wallpaper Scroll</string>
    <string name="pref_title__desktop_orientation">Orientation</string>
    <string name="pref_title__desktop_show_grid">Show Grid</string>
    <string name="pref_summary__desktop_show_grid">Show the guiding grid when dragging items.</string>
    <string name="pref_title__desktop_fullscreen">Fullscreen</string>
    <string name="pref_summary__desktop_fullscreen">Enable fullscreen for the desktop.</string>
    <string name="pref_title__desktop_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__desktop_show_position_indicator">Show the page indicator below the desktop.</string>
    <string name="pref_title__desktop_show_label">Show Labels</string>
    <string name="pref_summary__desktop_show_label">Show item labels below their icons.</string>
    <string name="pref_title__desktop_background_color">Background</string>
    <string name="pref_title__desktop_inset_color">System Bars</string>
    <string name="pref_title__desktop_folder_color">Folders</string>
    <string name="pref_title__search_bar_enable">Search Bar</string>
    <string name="pref_summary__search_bar_enable">Display a search bar above the desktop.</string>
    <string name="pref_title__search_bar_starts_with">Search apps by name</string>
    <string name="pref_summary__search_bar_starts_with">Search for apps starting with the search text.</string>
    <string name="pref_title__search_bar_base_uri">Search URI</string>
    <string name="pref_summary__search_bar_base_uri">Set the URI used for web searches.</string>
    <string name="pref_dialog__search_bar_base_uri">Enter the URI that should be used for web searches. The tag {query} can be used as
      placeholder for the search query, in case no placeholder is used the search query will be appended at the end of the URI.</string>
    <string name="pref_title__search_bar_force_browser">Force browser search</string>
    <string name="pref_summary__search_bar_force_browser">Always use the browser for online searches.</string>
    <string name="pref_title__search_bar_show_hidden_apps">Show hidden apps</string>
    <string name="pref_summary__search_bar_show_hidden_apps">Include hidden apps in the search results.</string>
    <string name="pref_title__weather_service_use_location_services">Use Location Services</string>
    <string name="pref_summary__weather_service_use_location_services">Use the phone\'s location services rather than manually specifying a location. This only uses Network location, not GPS.</string>
    <string name="pref_title__date_bar">Date Bar</string>
    <string name="pref_title__date_bar_text_color">Text Color</string>
    <string name="pref_title__date_bar_date_format">Date Format</string>
    <string name="pref_title__date_bar_date_format_custom_1">Custom Format: Line 1</string>
    <string name="pref_title__date_bar_date_format_custom_2">Custom Format: Line 2</string>
    <string name="pref_title__weather_service">Weather Service</string>
    <string name="pref_title__weather_service_apikey">API Key</string>
    <string name="pref_summary__weather_service_apikey">Specify the API Key for the Weather Service (if required).</string>
    <string name="pref_title__weather_service_units">Metric?</string>
    <string name="pref_summary__weather_service_units">Select if you want Metric measurements, or deselect for Imperial. OpenWeatherMap only currently.</string>
     <string name="pref_title__weather_service_hourly">Hourly Forecasts?</string>
    <string name="pref_summary__weather_service_hourly">Check the hourly forecast instead of daily (hourly for AU BOM, 3 hourly for OpenWeatherMap).</string>
    <string name="pref_title__weather_service_city">Town/City?</string>
    <string name="pref_summary__weather_service_city">Enter the name or postcode of your preferred locality if you prefer not to use Location Services. Leave blank otherwise.</string>
    <string name="pref_default__weather_service_city">Enter Postcode</string>
    <string name="pref_title__dock_show_label">Show Labels</string>
    <string name="pref_summary__dock_show_label">Show item labels below their icons.</string>
    <string name="pref_title__dock_background_color">Background</string>
    <string name="pref_title__drawer_style">Style</string>
    <string name="pref_summary__drawer_style">Choose between a paged and vertical app drawer.</string>
    <string name="pref_title__drawer_show_card_view">Card View</string>
    <string name="pref_summary__drawer_show_card_view">Show a card view above the drawer background.</string>
    <string name="pref_title__drawer_remember_position">Remember Last Page</string>
    <string name="pref_summary__drawer_remember_position">Keep track of the current app drawer page.</string>
    <string name="pref_title__drawer_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__drawer_show_position_indicator">Show the page indicator or scrollbar depending on the style.</string>
    <string name="pref_title__drawer_show_label">Show Labels</string>
    <string name="pref_title__language">Language</string>
    <string name="pref_summary__language">Change language used throughout the launcher.</string>
    <string name="pref_title__backup">Backup</string>
    <string name="pref_summary__backup">Backup your desktop and settings to any location.</string>
    <string name="pref_title__restore">Restore</string>
    <string name="pref_summary__restore">Restore your desktop and settings.</string>
    <string name="pref_title__reset_settings">Reset Settings</string>
    <string name="pref_summary__reset_settings">Delete internal files used to store the settings.</string>
    <string name="pref_title__reset_database">Reset Database</string>
    <string name="pref_summary__reset_database">Remove all items from the desktop.</string>
    <string name="pref_title__restart">Restart</string>
    <string name="pref_summary__restart">This can be used to manually apply some settings.</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="remove">Remove</string>
</resources>