<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/editIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_dark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/edit"
        android:tint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/removeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_close"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/remove"
        android:tint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/infoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_info"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/info"
        android:tint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/deleteIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_delete"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/uninstall"
        android:tint="?android:textColorPrimary" />

</LinearLayout>